--- a/RegistroClientes/style.css
+++ b/RegistroClientes/style.css
@@ -1,11 +1,28 @@
-.Titulo {
+.registro-cliente {
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 45px;
     line-height: 54px;
     color: #000000;
+    white-space: nowrap;
+  border-right: 4px solid;
+  animation: typing 2s steps(100), blink .5s infinite step-end ;
+  overflow: hidden;
+  transition: .5s;
 }
+
+@keyframes typing {
+    from {
+      width: 0;
+    }
+  }
+  
+  @keyframes blink {
+    50% {
+      border-color: transparent;
+    }
+  }
 
 .CajaTexto {
     position: relative;
@@ -14,10 +31,17 @@
     flex-direction: column;
     gap: 25px;
     padding: 59px;
+    bottom: 80px;
 }
 
 .Nombre_Apellidos {
+    position: relative;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 975px;
+height: 79px;
+    top: 50px;
     gap: 60px;
     font-family: 'Inter';
     font-style: normal;
@@ -46,7 +70,12 @@ input.txtApellidos {
 }
 
 .DNI_Telefono {
+    position: relative;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 975px;
+height: 79px;
     gap: 118px;
     font-family: 'Inter';
     font-style: normal;
@@ -56,29 +85,22 @@ input.txtApellidos {
     color: #000000;
 }
 
-input.txtDni {
+input.txtDni,.txtTelefono {
     box-sizing: border-box;
-    width: 289px;
+    width: 359px;
     height: 50px;
     border: 3px solid #000000;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     border-radius: 8px;
 }
 
-input.txtTelefono {
-    box-sizing: border-box;
-    width: 289px;
-    height: 50px;
-    border: 3px solid #000000;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    border-radius: 8px;
-}
+
 
 button.REGISTRAR {
     width: 310px;
     height: 62px;
-    background: #1BAA4D;
-    opacity: 85%;
+    background: #92D6AA;
+   
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 15px;
     display: flex;
@@ -151,8 +173,8 @@ button.LIMPIAR {
 button.CANCELAR {
     width: 310px;
     height: 62px;
-    opacity: 81%;
-    background: #FF0008;
+    
+    background: #FF8588;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 15px;
     display: flex;
@@ -171,6 +193,7 @@ button.CANCELAR {
     right: 4.86%;
     top: 32.32%;
     bottom: 61.62%;
+    
 }
 
 button.Volver {
@@ -193,7 +216,7 @@ button.Volver {
 .BuscarCliente {
     box-sizing: border-box;
     position: absolute;
-    width: 1322px;
+    width: 92.0%;
     height: 39px;
     left: 49px;
     top: 411px;
@@ -204,8 +227,8 @@ button.Volver {
 }
 
 input.txtBuscarCliente {
-    right: 4%;
-    width: 1257px;
+    
+    width: 99.6%;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
@@ -223,7 +246,7 @@ input.imgBuscar {
 }
 
 .Tabla {
-    position: absolute;
+    position: relative;
     display: grid;
     left: 49px;
     top: 448px;
@@ -240,8 +263,59 @@ table#Tabla\ Registro {
     border-collapse: collapse;
 }
 
-th {
-    background-color: #ffffff;
-    border: 1px solid #000000;
-}
+table,
+th,
+td {
+    border: 1px solid black;
+  border-collapse: collapse;
+  text-align: center;
+  justify-content: center;
+  padding: 5px;
 
+}
+th,
+td {
+  width: 20px;
+  height: 30px;
+}
+table tr:nth-child(odd) td {
+    background-color: #E3E3E3;
+  
+  }
+  th {
+    background-color: #E3E3E3;
+  }
+  
+
+.franja{
+    position: absolute;
+width: 1319px;
+height: 10px;
+left: 73px;
+top: 90.17px;
+
+background: #000000;
+}
+.registro-cliente{
+    
+position: absolute;
+width: 404px;
+height: 54px;
+left: 117px;
+top: 36px;
+
+font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 45px;
+line-height: 54px;
+
+color: #000000;
+}
+.Logo{
+    position: relative;
+width: 128px;
+height: 96px;
+left: 1250px;
+bottom: 10px;
+}
