--- a/AreaReportes/reportes.css
+++ b/AreaReportes/reportes.css
@@ -19,9 +19,6 @@ a.nav-link {
   background-color: #fff;
 }
 
-@media (max-width: 992px) {
-  /* Mobile L and below */
-  #card-stockbajo .container {
-    min-height: 400px;
-  }
+body {
+  font-family: "Roboto", sans-serif;
 }
