--- a/RegistroClientes/style.css
+++ b/RegistroClientes/style.css
@@ -1,153 +1,127 @@
-.registro-cliente {
+.Franja {
+    height: 7px;
+    background-color: black;
+}
+
+.Cabecera {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+}
+
+.Titulo {
+    display: flex;
     font-family: 'Inter';
     font-style: normal;
-    font-weight: 400;
-    font-size: 45px;
-    line-height: 54px;
-    color: #000000;
-    white-space: nowrap;
-  border-right: 4px solid;
-  animation: typing 2s steps(100), blink .5s infinite step-end ;
-  overflow: hidden;
-  transition: .5s;
+    align-items: flex-end;
 }
 
-@keyframes typing {
-    from {
-      width: 0;
-    }
-  }
-  
-  @keyframes blink {
-    50% {
-      border-color: transparent;
-    }
-  }
-
-.CajaTexto {
-    position: relative;
-    left: 16%;
+.CajasTexto {
     display: flex;
-    flex-direction: column;
-    gap: 25px;
-    padding: 59px;
-    bottom: 80px;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
 }
+
 
 .Nombre_Apellidos {
-    position: relative;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 975px;
-height: 79px;
-    top: 50px;
-    gap: 60px;
+    justify-content: space-around;
+    gap: 10px;
     font-family: 'Inter';
     font-style: normal;
-    font-weight: 400;
-    font-size: 40px;
-    line-height: 42px;
+    font-size: 35px;
     color: #000000;
-}
-
-input.txtNombre {
-    box-sizing: border-box;
-    width: 289px;
-    height: 51px;
-    border: 3px solid #000000;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    border-radius: 8px;
-}
-
-input.txtApellidos {
-    box-sizing: border-box;
-    width: 289px;
-    height: 51px;
-    border: 3px solid #000000;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    border-radius: 8px;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 .DNI_Telefono {
-    position: relative;
     display: flex;
-    justify-content: center;
     align-items: center;
-    width: 975px;
-height: 79px;
-    gap: 118px;
+    gap: 10px;
     font-family: 'Inter';
     font-style: normal;
-    font-weight: 400;
-    font-size: 40px;
-    line-height: 45px;
+    font-size: 35px;
     color: #000000;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 
-input.txtDni,.txtTelefono {
-    box-sizing: border-box;
-    width: 359px;
-    height: 50px;
-    border: 3px solid #000000;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    border-radius: 8px;
+.Nombre {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    justify-content: flex-start;
+}
+.Apellidos {
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
 
+.DNI {
+    display: flex;
+    align-items: center;
+    gap: 60px;
+    justify-content: space-around;
+}
 
+.Telefono {
+    display: flex;
+    align-items: center;
+    gap: 21px;
+    justify-content: flex-start;
+}
+
+.Botones {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+    gap: 15px;
+}
 
 button.REGISTRAR {
-    width: 310px;
-    height: 62px;
+    overflow: hidden;
+    width: 120%;
+    height: 55px;
     background: #92D6AA;
-   
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 15px;
     display: flex;
     align-items: center;
-    justify-content: space-around;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
     font-size: 21px;
-    line-height: 25px;
-    text-align: center;
-    color: #005C21;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    position: absolute;
-    left: 3.4%;
-    right: 75.07%;
-    top: 32.13%;
-    bottom: 61.82%;
+    flex-direction: row-reverse;
+    justify-content: space-around;
+    align-content: center;
+    flex-wrap: nowrap;
 }
 
 button.EDITAR {
-    width: 310px;
-    height: 62px;
+    overflow: auto;
+    width: 120%;
+    height: 55px;
     background: #E8FD65;
     box-shadow: 0px 5px 4px rgba(0, 0, 0, 0.25);
     border-radius: 15px;
     display: flex;
-    align-items: center;
     justify-content: space-around;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
     font-size: 21px;
     line-height: 25px;
-    text-align: center;
-    color: #2D2F2F;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    position: absolute;
-    left: 26.61%;
-    right: 21.86%;
-    top: 32.32%;
-    bottom: 61.62%;
+    flex-direction: row-reverse;
+    align-items: center;
 }
 
 button.LIMPIAR {
-    width: 310px;
-    height: 62px;
+    width: 120%;
+    height: 55px;
     background: #D0DDE0;
     opacity: 85%;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -163,17 +137,13 @@ button.LIMPIAR {
     text-align: center;
     color: #2D2F2F;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    position: absolute;
-    left: 49.93%;
-    right: 28.54%;
-    top: 32.32%;
-    bottom: 61.72%;
+    flex-direction: row-reverse;
+    overflow: hidden;
 }
 
 button.CANCELAR {
-    width: 310px;
-    height: 62px;
-    
+    width: 120%;
+    height: 55px;
     background: #FF8588;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 15px;
@@ -188,18 +158,16 @@ button.CANCELAR {
     text-align: center;
     color: #810606;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    position: absolute;
-    left: 73.61%;
-    right: 4.86%;
-    top: 32.32%;
-    bottom: 61.62%;
-    
+    flex-direction: row-reverse;
+    overflow: hidden;
+}
+.Volver {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
 }
 
 button.Volver {
-    position: absolute;
-    top: 100%;
-    right: 1%;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
@@ -213,57 +181,35 @@ button.Volver {
     background: none;
     border: none;
 }
-.BuscarCliente {
-    box-sizing: border-box;
-    position: absolute;
-    width: 92.0%;
-    height: 39px;
-    left: 49px;
-    top: 411px;
+
+.BarraBuscar {
+    width: -webkit-fill-available;
     border-width: 3px 3px 0px 3px;
     border-style: solid;
-    border-color: #3A3838;
+    border-radius: 0px;
+}
+.BuscarCliente {
+    display: flex;
+    justify-content: space-between;
+}
+
+.ImgBuscar {
+    display: flex;
+    width: initial;
+    border-width: 3px 3px 0px 0px;
+    border-style: solid;
     border-radius: 0px;
 }
 
-input.txtBuscarCliente {
-    
-    width: 99.6%;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 25px;
-    line-height: 29px;
-    display: flex;
-    flex-direction: column-reverse;
-    position: absolute;
-}
-
-input.imgBuscar {
-    position: absolute;
-    right: 0.5%;
-    top: 10%;
-}
-
 .Tabla {
-    position: relative;
-    display: grid;
-    left: 49px;
-    top: 448px;
-    border: 1px solid #000000;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 35px;
     border-width: 3px 3px 3px 3px;
-    width: 91.5%;
+    border: 3px solid #000000;
+    font-size: 22px;
+    font-style: normal;
+    overflow: auto;
 }
 
-table#Tabla\ Registro {
-    border-collapse: collapse;
-}
 
-table,
 th,
 td {
     border: 1px solid black;
@@ -275,47 +221,18 @@ td {
 }
 th,
 td {
-  width: 20px;
-  height: 30px;
+  width: 27px;
+  height: 37px;
 }
-table tr:nth-child(odd) td {
-    background-color: #E3E3E3;
-  
-  }
-  th {
-    background-color: #E3E3E3;
-  }
-  
 
-.franja{
-    position: absolute;
-width: 1319px;
-height: 10px;
-left: 73px;
-top: 90.17px;
-
-background: #000000;
+@keyframes typing {
+    from {
+        width: 0;
+    }
 }
-.registro-cliente{
-    
-position: absolute;
-width: 404px;
-height: 54px;
-left: 117px;
-top: 36px;
 
-font-family: 'Inter';
-font-style: normal;
-font-weight: 400;
-font-size: 45px;
-line-height: 54px;
-
-color: #000000;
-}
-.Logo{
-    position: relative;
-width: 128px;
-height: 96px;
-left: 1250px;
-bottom: 10px;
+@keyframes blink {
+    50% {
+        border-color: transparent;
+    }
 }
