sticky header corregido
sticky header de la tabla del area clientes corregido

--- a/RegistroClientes/style.css
+++ b/RegistroClientes/style.css
@@ -89,6 +89,12 @@ td {
   width: 27px;
   height: 37px;
 }
+.sticky-header {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  background-color: #fff;
+}
 
 @keyframes typing {
   from {
