--- a/AreaRegistro/registro.css
+++ b/AreaRegistro/registro.css
@@ -62,12 +62,12 @@ body {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
     padding: 5px;
+    font-family: Roboto;
 }
-
 
 button {
     background-color: #009640;
-    color: #fff;
+    color: #FFFFFF;
     border: none;
     padding: 10px;
     width: 65%;
@@ -76,6 +76,7 @@ button {
     font-weight: 600;
     font-size: 20px;
     margin: 0 auto;
+    font-family: Roboto;
 }
 
 button:hover {
