--- a/AreaAdministracion/style.css
+++ b/AreaAdministracion/style.css
@@ -1,175 +1,207 @@
 body {
-    width: 1440px;
-    height: 1024px;
+  width: 1440px;
+  height: 1024px;
 }
 
 .caja-superior {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 1318px;
-    height: 222px;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 1318px;
+  height: 222px;
 }
 .franja {
-    width: 100%;
-    height: 8px;
-    background-color: black;
+width: 100%;
+  height: 12px;
+  background-color: black;
+position: relative;
+overflow: hidden;
+
 }
+.franja:before {
+content: "";
+position: absolute;
+top: 0;
+left: 0;
+width: 0;
+height: 100%;
+background-color: gray;
+transition: width 0.5s;
+}
+
+.franja:hover:before {
+width: 100%;
+}
+
+
 .caja-superior label,
 .caja-superior img {
-    position: relative;
-    right: 500px;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 26px;
-    line-height: 30px;
-    color: #000000;
-   
+  position: relative;
+  right: 500px;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 26px;
+  line-height: 30px;
+  color: #000000;
+ 
 }
 
 /**/
 .caja-central {
-    box-sizing: border-box;
+  box-sizing: border-box;
 
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 1322px;
-    height: 424px;
-    left: 75px;
-    top: 268px;
-    background: #FFFFFF;
-    border: 5px solid #000000;
-    gap: 57px;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 1322px;
+  height: 424px;
+  left: 75px;
+  top: 268px;
+  background: #FFFFFF;
+  border: 5px solid #000000;
+  gap: 57px;
 }
 
 .edicion-nombre {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    width: 1274px;
-    height: 96px;
-    gap: 5px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 1274px;
+  height: 96px;
+  gap: 5px;
 
 }
 
 .edicion-nombre input {
-    width: 669.16px;
-    height: 51px;
-    border: 3px solid #000000;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    border-radius: 8px;
-    font-size: 25px;
+  width: 669.16px;
+  height: 51px;
+  border: 3px solid #000000;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  border-radius: 8px;
+  font-size: 25px;
 }
 
 .edicion-nombre span,
 .edicion-logo span {
-    width: 584.34px;
-    height: 42px;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 35px;
-    line-height: 42px;
-    color: #8A8181;
-   
-  white-space: nowrap;
-  border-right: 4px solid;
-  animation: typing 2s steps(100), blink .5s infinite step-end;
-  overflow: hidden;
-  transition: .5s;
-  caret-color: transparent; /* Hace que el punto de inserción sea transparente */
+  width: 584.34px;
+  height: 42px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 35px;
+  line-height: 42px;
+  color: #8A8181;
+ 
+white-space: nowrap;
+border-right: 4px solid;
+animation: typing 2s steps(100), blink .5s infinite step-end;
+overflow: hidden;
+transition: .5s;
+caret-color: transparent; /* Hace que el punto de inserción sea transparente */
 }
 .edicion-nombre span::after,
-.edicion-logo span ::after {
-    content: '';
-    display: inline-block;
-    vertical-align: middle;
-    width: 2px;
-    height: 42px;
-    background-color: transparent;
-    animation: caret-disappear 2s steps(100) forwards;
+.edicion-logo span ::after, .admin::after{
+  content: '';
+  display: inline-block;
+  vertical-align: middle;
+  width: 2px;
+  height: 42px;
+  background-color: transparent;
+  animation: caret-disappear 2s steps(100) forwards;
 }
+
 @keyframes typing {
-    from {
-      width: 0;
-    }
+  from {
+    width: 0;
+  }
+}
+
+@keyframes blink {
+  00% {
+    border-color: #FFFFFF;
   }
   
-  @keyframes blink {
-    50% {
-      border-color: #FFFFFF;
-    }
-    
+}
+@keyframes caret-disappear {
+  from {
+    background-color: #000000;
   }
-  @keyframes caret-disappear {
-    from {
-      background-color: #000000;
-    }
-    to {
-      background-color: transparent;
-    }
+  to {
+    background-color: transparent;
   }
+}
 
 .edicion-logo {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    width: 1274px;
-    height: 140px;
-    gap: 200px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 1274px;
+  height: 140px;
+  gap: 200px;
 }
 
 .edicion-logo input {
-    width: 142.5px;
-    height: 140.50px;
+  width: 142.5px;
+  height: 140.50px;
 }
 
 /**/
 .caja-inferior {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    width: 811px;
-    height: 161px;
-    left: 271px;
-    top: 719px;
-    gap: 140px;
-    background: #FFFFFF;
-}
-.caja-inferior button {
-  width: 305px;
-  height: 55px;
+  position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 55px;
-  font-size: 21px;
-  font-family: Roboto;
-  font-weight: 500;
+  flex-direction: row;
+  width: 811px;
+  height: 161px;
+  left: 271px;
+  top: 719px;
+  gap: 140px;
+  background: #FFFFFF;
+}
+.caja-inferior button {
+width: 305px;
+height: 55px;
+display: flex;
+justify-content: center;
+align-items: center;
+gap: 55px;
+font-size: 21px;
+font-family: Roboto;
+font-weight: 500;
 }
 .guardar {
-  background: #92D6AA;
-  box-shadow: 0px 4px 4px rgba(49, 247, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 15px;
+background: #92D6AA;
+box-shadow: 0px 4px 4px rgba(49, 247, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+border-radius: 15px;
 }  
 .eliminar {
-  background: #FF8588;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 15px;
+background: #FF8588;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+border-radius: 15px;
+}
+.eliminar:active{
+scale: 1.1;
+background-image: linear-gradient(160deg,
+    #cc696b, #FF8588, #cc696b);
+transition: .3s;
+}
+.guardar:active{
+scale: 1.1;
+background-image: linear-gradient(160deg,
+    #74a886, #92D6AA, #74a886);
+transition: .3s;
 }
 /**/
 .caja-inferior-derecha{
-    position: absolute;
+  position: absolute;
 width: 124px;
 height: 74px;
 left: 1230px;
