--- a/RegistroClientes/style.css
+++ b/RegistroClientes/style.css
@@ -4,27 +4,10 @@ body {
 }
 
 .Franja {
-  height: 12px;
+  height: 7px;
   background-color: black;
-  position: relative;
-  overflow: hidden;
-  margin: 15px;
 }
 
-.Franja:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 0;
-  height: 100%;
-  background-color: gray;
-  transition: width 0.5s;
-}
-
-.Franja:hover:before {
-  width: 100%;
-}
 .Cabecera {
   display: flex;
   align-items: flex-end;
@@ -112,15 +95,6 @@ td {
   z-index: 1;
   background-color: #fff;
 }
-.titulo-clientes{
-  width: 310px;
-  color: #000000;
-  white-space: nowrap;
-  border-right: 4px solid;
-  animation: typing 2s steps(500), blink .5s infinite step-end ;
-  overflow: hidden;
-  transition: .5s;
-}
 
 @keyframes typing {
   from {
@@ -129,7 +103,7 @@ td {
 }
 
 @keyframes blink {
-  0% {
+  50% {
     border-color: transparent;
   }
 }
@@ -226,4 +200,8 @@ button#btn-cancelar {
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   flex-direction: row-reverse;
   overflow: hidden;
+}
+
+.selectable-row:hover {
+  cursor: pointer;
 }
