ANIMACION CURSOR EN TABLA

--- a/RegistroClientes/style.css
+++ b/RegistroClientes/style.css
@@ -227,3 +227,8 @@ button#btn-cancelar {
   flex-direction: row-reverse;
   overflow: hidden;
 }
+
+.selectable-row:hover {
+  cursor: pointer;
+}
+
