--- a/AreaAdministracion/style.css
+++ b/AreaAdministracion/style.css
@@ -215,3 +215,18 @@ line-height: 25px;
 text-align: center;
 color: #000000;
 }
+
+button.float-right {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 21px;
+  line-height: 25px;
+  text-align: center;
+  color: #000000;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+  display: flex;
+  align-items: center;
+  background: none;
+  border: none;
+}
