--- a/AreaVentas/style.css
+++ b/AreaVentas/style.css
@@ -26,6 +26,11 @@ body {
   align-items: flex-end;
   justify-content: space-between;
 }
+
+.col-md-10 {
+  color: #000000;
+}
+
 .Franja {
   height: 12px;
   background-color: black;
@@ -80,12 +85,14 @@ body {
   width: 100%;
   
 }
-.row{
+.row {
   gap: 5px;
+  color: #000000;
 }
+
+
 button#btn-registrar {
   overflow: hidden;
-border-color: #98D9AF;
   height: 55px;
   background: #98D9AF;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25),
@@ -101,12 +108,10 @@ border-color: #98D9AF;
   justify-content: space-around;
   align-content: center;
   flex-wrap: nowrap;
-  color: #005C21;
 }
 button#btn-boleta {
   height: 55px;
   background: #98D9AF;
-  opacity: 85%;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25),
     0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 15px;
@@ -119,10 +124,10 @@ button#btn-boleta {
   font-size: 21px;
   line-height: 25px;
   text-align: center;
-  color: #005C21;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   flex-direction: row-reverse;
   overflow: hidden;
+  color: #212529;
 }
 button#btn-registrar:active,
 button#btn-boleta:active {
@@ -134,7 +139,7 @@ button#btn-boleta:active {
 
 button#btn-eliminar {
   height: 55px;
-  background: #D0565A;
+  background: #FF8588;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25),
     0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 15px;
