--- a/RegistroClientes/style.css
+++ b/RegistroClientes/style.css
@@ -147,6 +147,7 @@ td {
 
 .container {
   font-family: Roboto;
+  color: #000000;
 }
 
 button#btn-registrar {
@@ -202,7 +203,6 @@ button#btn-editar:active{
 button#btn-eliminar {
   height: 55px;
   background: #d0dde0;
-  opacity: 85%;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25),
     0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 15px;
@@ -215,7 +215,7 @@ button#btn-eliminar {
   font-size: 21px;
   line-height: 25px;
   text-align: center;
-  color: #2d2f2f;
+  color: #212529;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   flex-direction: row-reverse;
   overflow: hidden;
