--- a/AreaInventario/style.css
+++ b/AreaInventario/style.css
@@ -2,6 +2,12 @@ html,
 body {
   font-family: "Roboto";
 }
+
+.container {
+  font-family: Roboto;
+  color: #000000;
+}
+
 .Franja {
   height: 12px;
   background-color: black;
@@ -214,7 +220,7 @@ button#btn-eliminar {
   font-size: 21px;
   line-height: 25px;
   text-align: center;
-  color: #2d2f2f;
+  color: #212529;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   flex-direction: row-reverse;
   overflow: hidden;
