--- a/AreaVentas/style.css
+++ b/AreaVentas/style.css
@@ -1,14 +1,14 @@
 body {
-  font-family: 'Roboto';
+  font-family: "Roboto";
 }
-.titulo-ventas{
+.titulo-ventas {
   width: 310px;
   color: #000000;
   white-space: nowrap;
   border-right: 4px solid;
-  animation: typing 2s steps(500), blink .5s infinite step-end ;
+  animation: typing 2s steps(500), blink 0.5s infinite step-end;
   overflow: hidden;
-  transition: .5s;
+  transition: 0.5s;
 }
 @keyframes typing {
   from {
@@ -26,11 +26,6 @@ body {
   align-items: flex-end;
   justify-content: space-between;
 }
-
-.col-md-10 {
-  color: #000000;
-}
-
 .Franja {
   height: 12px;
   background-color: black;
@@ -56,14 +51,6 @@ body {
 /**/
 
 /**/
-.BarraBuscar {
-  width: -webkit-fill-available;
-  border-width: 3px 3px 0px 3px;
-  border-style: solid;
-  border-radius: 0px;
-  font-family: Roboto;
-  
-}
 
 .CajasTexto {
   display: flex;
@@ -71,7 +58,7 @@ body {
   justify-content: center;
   flex-wrap: wrap;
 }
-.custom-input{
+.custom-input {
   width: 20px;
 }
 .button-container {
@@ -83,18 +70,17 @@ body {
 
 .button-container button {
   width: 100%;
-  
 }
 .row {
   gap: 5px;
-  color: #000000;
 }
 
-
-button#btn-registrar {
+button#btn-registrarventa {
   overflow: hidden;
+
   height: 55px;
-  background: #98D9AF;
+  background: #92d6aa;
+  color: #2d2f2f;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25),
     0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 15px;
@@ -109,9 +95,39 @@ button#btn-registrar {
   align-content: center;
   flex-wrap: nowrap;
 }
-button#btn-boleta {
+button#btn-registrarventa:active {
+  scale: 1.1;
+  background-image: linear-gradient(160deg, #639173, #92d6aa, #639173);
+  transition: 0.3s;
+}
+button#btn-editarventa {
+  overflow: auto;
+
   height: 55px;
-  background: #98D9AF;
+  background: #e8fd65;
+  color: #2d2f2f;
+  box-shadow: 0px 5px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 15px;
+  display: flex;
+  justify-content: space-around;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 21px;
+  line-height: 25px;
+  flex-direction: row-reverse;
+
+  align-items: center;
+}
+button#btn-editarventa:active {
+  scale: 1.1;
+  background-image: linear-gradient(160deg, #afbe4a, #e8fd65, #afbe4a);
+  transition: 0.3s;
+}
+button#btn-eliminarventa {
+  height: 55px;
+  background: #d0dde0;
+  opacity: 85%;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25),
     0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 15px;
@@ -124,22 +140,19 @@ button#btn-boleta {
   font-size: 21px;
   line-height: 25px;
   text-align: center;
+  color: #2d2f2f;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   flex-direction: row-reverse;
   overflow: hidden;
-  color: #212529;
 }
-button#btn-registrar:active,
-button#btn-boleta:active {
+button#btn-eliminarventa:active {
   scale: 1.1;
-  background-image: linear-gradient(160deg,
-      #74a886, #92D6AA, #74a886);
-  transition: .3s;
+  background-image: linear-gradient(160deg, #a0a9ac, #d0dde0, #a0a9ac);
+  transition: 0.3s;
 }
-
-button#btn-eliminar {
+button#btn-cancelarventa {
   height: 55px;
-  background: #FF8588;
+  background: #ff8588;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25),
     0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 15px;
@@ -157,11 +170,35 @@ button#btn-eliminar {
   flex-direction: row-reverse;
   overflow: hidden;
 }
-button#btn-eliminar:active {
+button#btn-cancelarventa:active {
   scale: 1.1;
-  background-image: linear-gradient(160deg,
-      #aa4649, #D0565A, #a13e41);
-  transition: .3s;
+  background-image: linear-gradient(160deg, #c06263, #ff8588, #c06263);
+  transition: 0.3s;
+}
+button#btn-generarboleta {
+  height: 55px;
+  background: #84d6ff;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25),
+    0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 21px;
+  line-height: 25px;
+  text-align: center;
+  color: #000000;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  flex-direction: row-reverse;
+  overflow: hidden;
+}
+button#btn-generarboleta:active {
+  scale: 1.1;
+  background-image: linear-gradient(160deg, #6baccc, #84d6ff, #6baccc);
+  transition: 0.3s;
 }
 
 th,
@@ -177,9 +214,9 @@ td {
   width: 27px;
   height: 37px;
 }
-.Volver{
+.Volver {
   border-color: #ffffff;
-display: flex;
+  display: flex;
   align-items: center;
   justify-content: flex-end;
 }
